Comment out copyright information in footer
Comment out copyright and sound attribution paragraphs

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </main>
 
     <footer>
-      <p>© Copyrights <span id="year"></span> Erin Ruark / UMSI.</p>
-      <p id="soundCopyright">Relaxing Forest Birds Chirping in the North Woods by taavhaap on freesound.org</p>
+      <!-- <p>© Copyrights <span id="year"></span> Erin Ruark / UMSI.</p>
+      <!-- <p id="soundCopyright">Relaxing Forest Birds Chirping in the North Woods by taavhaap on freesound.org</p> --> -->
         </footer>
       </body>
 </html>
