--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
 
     </header>
     <main id="main">
-      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/2nezLTrPFJpOOPuCgPZ8qy/Good-news---Community-?page-id=21%3A2&node-id=21-111&p=f&viewport=416%2C489%2C0.19&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=21%3A111&embed-host=share" allowfullscreen></iframe>
+      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="auto" height="auto" src="https://embed.figma.com/proto/2nezLTrPFJpOOPuCgPZ8qy/Good-news---Community-?page-id=21%3A2&node-id=21-111&p=f&viewport=416%2C489%2C0.19&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=21%3A111&embed-host=share" allowfullscreen></iframe>
        
     </main>
 
     <footer>
-      <!-- <p>© Copyrights <span id="year"></span> Erin Ruark / UMSI.</p>
-      <!-- <p id="soundCopyright">Relaxing Forest Birds Chirping in the North Woods by taavhaap on freesound.org</p> --> -->
         </footer>
       </body>
 </html>
